config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: dev
spec:
  selector:
    app: myapp
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 8080
