config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
   - http:
      paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: wil-playground
            port:
             number: 88
